Changelog
=========

0.3 - unreleased
----------------

- Prevent the front page view from being accessible by anonymous users.
  Refs #68.
  [hannosch]

- Hooked translations from ``intranett`` domain to profile view.
  [denys]

- Profile page (author.cpt). References #67.
  [denys]

- Fixed edge case of the frontpage when no portlets registered in the
  frontpage columns. Fixes #97.
  [denys, hannosch]

- Ajaxified publishing of a comment when comment_review_workflow is the main
  workflow for the comments.
  [denys]

- Prevent "You already clicked" message from showing up when filling out "Add
  comment" form.
  [denys]

- Live binding click event on "Delete" actions of the comments, returned by
  Ajax calls.
  [denys]

- Fixing styles for <header> so that it would not look broken without global
  navigation items.
  [denys]

- Styling and js support for comments. References #72.
  [denys]
  
- Added basic upgrade tests.
  [hannosch]  

- Fixed styling for footer of the site.
  [denys]

- Styles for Table of Contents. References #49.
  [denys]

- Print styles. References #51.
  [denys]

- New favicon.ico
  [denys]

0.2 - 2010-10-14
----------------

- Fixes to stylings in IE7+
  [denys]

- Customized some basic stylesheets, used in TinyMCE visual editor.
  [denys]

- Re-enabled edit-bar on manage-frontpage view. Test for this is supplied.
  [denys]

- Got rid of the right column on edit screens byt customizing base_edit.cpt.
  [denys]

- TinyMCE's toolbar now looks as other toolbars - grey gradient with a border.
  [denys]

- Aligned portal message with open/close edit-bar button.
  [denys]

- Equalize height of dl.portalMessage dt and .portalMessage dd in order to
  make them equally high in cases the message wraps into more than one line.
  [denys]

- Customized image_view_fullscreen to get rid of annoying underlining under
  the image.
  [denys]

- Moved ploneCustom.css to after main.css in order to be able to customize
  styles for separate projects.