@@ -1,0 +1,12 @@
+Robots
+------
+
+Get us a test browser, as an anonymous user:
+
+  >>> browser = self.getBrowser(loggedIn=False)
+  >>> browser.open(self.portal.absolute_url() + '/robots.txt')
+
+We should be allowed to view the page and see the disallow line:
+
+  >>> "Disallow: /" in browser.contents
+  True
